# clang-tidy-standalone

./: CMakeLists.txt  ClangTidyForceLinker.h  README.md
cmake/: clang_wrapper.cmake
misc/: CMakeLists.txt  MiscTidyModule.cpp
tool/: CMakeLists.txt
